--- a/app/src/main/res/layout/activity_data_query.xml
+++ b/app/src/main/res/layout/activity_data_query.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.DataQueryActivity">
 
     <LinearLayout
@@ -15,9 +16,137 @@
             android:layout_margin="5dp"
             android:layout_height="wrap_content">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                
+
+                <net.cachapa.expandablelayout.ExpandableLayout
+                    android:id="@+id/expandableLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:el_duration="1000"
+                    app:el_expanded="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_weight="3"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:text="From"
+                                    android:layout_marginRight="5dp"
+                                    android:gravity="left"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/black"/>
+
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="2"
+                                    android:layout_height="wrap_content"
+                                    android:text="tap to enter"
+                                    android:textSize="16sp"
+                                    android:gravity="left"
+                                    android:textColor="@color/blue"
+                                    android:id="@+id/fromDateInputText"/>
+
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_weight="3"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:text="To"
+                                    android:gravity="center"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/black" />
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="2"
+                                    android:layout_height="wrap_content"
+                                    android:text="tap to enter"
+                                    android:gravity="left"
+                                    android:textSize="16sp"
+                                    android:textColor="@color/blue"
+                                    android:id="@+id/toDateInputText"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <RadioButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Spending"
+                                android:gravity="left"
+                                android:textSize="18sp"
+                                android:layout_marginRight="8dp"
+                                android:paddingTop="2dp"
+                                android:textColor="@color/black"
+                                android:id="@+id/spendingTableRadioButton"/>
+                            <RadioButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Earning"
+                                android:paddingTop="2dp"
+                                android:gravity="left"
+                                android:textSize="18sp"
+                                android:layout_marginRight="8dp"
+                                android:id="@+id/earningTableRadioButton"/>
+
+                            <RadioButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="2dp"
+                                android:gravity="left"
+                                android:textSize="18sp"
+                                android:text="Combined"/>
+
+                        </LinearLayout>
+                        
+                    </LinearLayout>
+
+                </net.cachapa.expandablelayout.ExpandableLayout>
+
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:layout_width="match_parent"
+            android:layout_height="250dp"/>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
