--- a/app/src/main/res/layout/activity_data_query.xml
+++ b/app/src/main/res/layout/activity_data_query.xml
@@ -19,9 +19,35 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:orientation="vertical">
 
-                
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:text="Showing Data"/>
+
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_toLeftOf="@id/expandMoreText"
+                        android:layout_height="wrap_content"/>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/expandMoreText"
+                        android:background="@drawable/ic_expand_more_black_24dp"/>
+
+                </RelativeLayout>
 
                 <net.cachapa.expandablelayout.ExpandableLayout
                     android:id="@+id/expandableLayout2"
@@ -35,106 +61,95 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:orientation="horizontal">
+                            android:layout_margin="10dp">
 
                             <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_weight="3"
-                                android:layout_gravity="center"
-                                android:layout_height="wrap_content">
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentLeft="true"
+                                android:orientation="horizontal">
 
                                 <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="From"
-                                    android:layout_marginRight="5dp"
-                                    android:gravity="left"
-                                    android:textSize="18sp"
+                                    android:text="From :"
+                                    android:layout_marginRight="15dp"
                                     android:textColor="@color/black"/>
 
 
                                 <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="2"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="tap to enter"
-                                    android:textSize="16sp"
-                                    android:gravity="left"
-                                    android:textColor="@color/blue"
                                     android:id="@+id/fromDateInputText"/>
 
                             </LinearLayout>
 
 
                             <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_weight="3"
-                                android:layout_gravity="center"
+                                android:layout_width="wrap_content"
+                                android:layout_alignParentRight="true"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="To"
-                                    android:gravity="center"
-                                    android:textSize="18sp"
+                                    android:text="To :"
+                                    android:layout_marginRight="15dp"
                                     android:textColor="@color/black" />
                                 <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="2"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="tap to enter"
-                                    android:gravity="left"
-                                    android:textSize="16sp"
-                                    android:textColor="@color/blue"
                                     android:id="@+id/toDateInputText"/>
 
                             </LinearLayout>
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_gravity="center"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Spending"
+                                android:layout_alignParentLeft="true"
                                 android:gravity="left"
-                                android:textSize="18sp"
                                 android:layout_marginRight="8dp"
-                                android:paddingTop="2dp"
+                                android:paddingTop="5dp"
                                 android:textColor="@color/black"
                                 android:id="@+id/spendingTableRadioButton"/>
                             <RadioButton
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Earning"
-                                android:paddingTop="2dp"
+                                android:layout_centerHorizontal="true"
+                                android:paddingTop="5dp"
                                 android:gravity="left"
-                                android:textSize="18sp"
                                 android:layout_marginRight="8dp"
                                 android:id="@+id/earningTableRadioButton"/>
 
-                            <RadioButton
+                            <RelativeLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingTop="2dp"
-                                android:gravity="left"
-                                android:textSize="18sp"
-                                android:text="Combined"/>
+                                android:layout_alignParentRight="true"
+                                android:layout_marginRight="10dp"
+                                android:layout_height="wrap_content">
+                                <RadioButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingTop="5dp"
+                                    android:gravity="left"
+                                    android:text="Combined"/>
+                            </RelativeLayout>
 
-                        </LinearLayout>
+                        </RelativeLayout>
                         
                     </LinearLayout>
 
@@ -144,9 +159,28 @@
 
         </android.support.v7.widget.CardView>
 
-        <com.github.mikephil.charting.charts.BarChart
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="250dp"/>
+            android:layout_margin="5dp"
+            android:layout_height="wrap_content">
+            <com.github.mikephil.charting.charts.BarChart
+                android:layout_width="match_parent"
+                android:id="@+id/dataViewerBarChart"
+                android:layout_margin="10dp"
+                android:layout_height="250dp"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:id="@+id/dataViewerRecyclerView"/>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
